[package]
name = "nxml"
version = "1.0.2"
edition = "2021"
description = "A parser for NXML (NXML is not XML!)"
license = "MIT"
documentation = "https://docs.rs/nxml"
homepage = "https://github.com/megahomyak/nxml"
repository = "https://github.com/megahomyak/nxml"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parco = "1.0.0"
